# PythonDesktopApp

./: .gitattributes  .gitignore  AWG-Kumulus-Device-Manager.spec  BUILD.md  DOCUMENTATION.md  INSTALLER_README.md  QUICKSTART.md  README.md  TEST_RESULTS.md  build.py  build_linux.sh  build_linux.spec  build_macos.sh  build_macos.spec  build_windows.spec  config.example.json  generate_translations.py  machineTypes.json  main.py  pyproject.toml  requirements.txt  run_app.bat  setup.iss  setup.py  show_structure.py  test_azure_email_dry.py  test_simple.py  test_tr_direct.py  test_translation.py  update_translations.py
BinaryFiles/GetMachineID/: GetMachineUid.elf  GetMachineUid.hex
docs/: ARCHITECTURE.md  MISSING_FEATURES.md  PROJECT_SUMMARY.md  README.md  changes-2025-11-19.md
docs/examples/: README.md
docs/features/: AUTO_EMAIL_FEATURE.md
docs/guides/: FIRMWARE_GUIDE.md  PIPELINE_SETUP_GUIDE.md  QUICKSTART.md  VERIFICATION.md
docs/manual/: user_manual_en.html  user_manual_fr.html
docs/uml/: class_diagram.mermaid  component_diagram.mermaid  sequence_diagram_tour.mermaid
prerequisites/: README.txt
preview/: index.html  manual_en.html  manual_fr.html
release/: README.md  USAGE.md
release/Windows/: INSTALL_README.txt
release/v1.0.5/: info.txt
src/: __init__.py
src/core/: bootstrap.py  config.py  crash_handler.py  (+16 more)
tests/: __init__.py  test_config.py  test_device_detector.py  test_email_sender.py  test_firmware_flasher.py  test_integration.py  test_language_manager.py  test_report_generator.py
translations/: app_ar.qm  app_ar.ts  app_fr.qm  app_fr.ts
(+8 files in other folders)
